<resources>
    <string name="app_name">MyMart</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyMart</string>
    <string name="nav_header_subtitle">A easiest solution for shopping</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home/Dashboard</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="menu_account">Account</string>
    <string name="menu_logout">logout</string>
    <string name="menu_feedback">feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_account">Account</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">feedback</string>
    <string name="nav_location">location</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_more">more</string>
    <string name="title_activity_google_maps">Map</string>

</resources>
